# stryke-mongo

./: .gitignore  Cargo.toml  Makefile  README.md  stryke.toml
.github/workflows/: ci.yml  release.yml
docs/: index.html  report.html
examples/: aggregate.stk  counts.stk  crud.stk  discover.stk  index_admin.stk
lib/: Mongo.stk
src/: lib.rs  main.rs
t/: test_mongo.stk  test_stryke_mongo_surface.stk
tests/: contract_cli_round4.rs
