[package]
name = "stryke-mongo-helper"
version = "0.1.1"
edition = "2021"
description = "MongoDB bridge binary for the stryke `mongo` package."
authors = ["MenkeTechnologies"]
license = "MIT"
repository = "https://github.com/MenkeTechnologies/stryke-mongo"
homepage = "https://menketechnologies.github.io/stryke-mongo/"
publish = false

[[bin]]
name = "stryke-mongo-helper"
path = "src/main.rs"

[dependencies]
mongodb = { version = "3", default-features = false, features = [
    "rustls-tls", "dns-resolver", "compat-3-0-0",
] }
bson = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
futures-util = "0.3"
clap = { version = "4", default-features = false, features = [
    "std", "derive", "help", "usage", "error-context", "env",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
