[package]
name = "stryke-mongo"
version = "0.19.0"
edition = "2021"
description = "MongoDB cdylib for the stryke `mongo` package — dlopened in-process via stryke's FFI bridge"
authors = ["MenkeTechnologies"]
license = "MIT"
repository = "https://github.com/MenkeTechnologies/stryke-mongo"
homepage = "https://menketechnologies.github.io/stryke-mongo/"
publish = false

[lib]
name = "stryke_mongo"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
mongodb = { version = "3", default-features = false, features = [
    "rustls-tls", "dns-resolver", "compat-3-0-0",
] }
bson = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
once_cell = "1"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
